Integrate Stripe for payments, complete order functionalities in admin and user, finalize Feasto

--- a/admin/src/components/Navbar/Navbar.css
+++ b/admin/src/components/Navbar/Navbar.css
@@ -1,14 +1,26 @@
-.navbar{
+.navbar {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 8px 4%;
 }
 
-.navbar .logo{
-    width: max(10%, 80px);
+.navbar-title {
+    display: flex;
+    flex-direction: column;
 }
 
-.navbar .profile{
+.navbar h1 {
+    margin: 0;
+    width: max(10%, 80px);
+    color: tomato;
+}
+
+.navbar p {
+    margin: 0;
+    font-size: 14px;
+}
+
+.navbar .profile {
     width: 40px;
 }
